<resources>
    <string name="app_name">OrderIt</string>
    <string name="user" translatable="false">User</string>
    <string name="home" translatable="false">home</string>
    <string name="basket" translatable="false">basket</string>
    <string name="order" translatable="false">orders</string>
    <string name="shr_hint_username">Email</string>
    <string name="shr_hint_mobileNo">Mobile No</string>
    <string name="shr_hint_address">Address</string>
    <string name="shr_hint_gender">Gender</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="rs">₹</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">Products</string>
    <string name="comleted_orders">Completed</string>
    <string name="ordered">ordered</string>
    <string name="delivered">delivered</string>
    <string name="address_hint">type your address here</string>
    <string-array name="order_status">
        <item>ordered</item>
        <item>shipped</item>
        <item>on the way</item>
        <item>out for delivery</item>
        <item>delivered</item>

    </string-array>
</resources>